Fix overflow on y axis for notebook moals

--- a/notebook/static/notebook/css/override.css
+++ b/notebook/static/notebook/css/override.css
@@ -5,3 +5,7 @@ a hack to deal with our current css styles and no new styling should be added in
 #ipython-main-app {
     position: relative;
 }
+
+.modal.fade.in {
+	overflow-y: scroll;
+}
